# ChangeLog for dev-libs/libmba
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmba/ChangeLog,v 1.4 2010/06/20 18:52:58 xarthisius Exp $

*libmba-0.9.1-r1 (20 Jun 2010)

  20 Jun 2010; Kacper Kowalik <xarthisius@gentoo.org>
  +libmba-0.9.1-r1.ebuild, +files/libmba-0.9.1-qa.patch:
  Fixing multiple QA issues and --as-needed failure wrt bug 313673. Thanks
  Diego for reporting.

  27 Oct 2008; Markus Ullmann <jokey@gentoo.org> libmba-0.9.1.ebuild:
  Fix emake call wrt bug #243922

  15 Apr 2007; Andrej Kacian <ticho@gentoo.org> libmba-0.9.1.ebuild:
  Stable on x86, bug #174628.

*libmba-0.9.1 (08 Oct 2006)

  08 Oct 2006; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +libmba-0.9.1.ebuild:
  Initial commit, thanks to Jonathan Manning and Daniel Willmann for providing
  an ebuild in bug #63546
