@@ -1,18 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX libmba-0.9.1-qa.patch 2824 RMD160 86856b825d1c53a1c0d8a847568fa504771435e2 SHA1 c85c53856cf7ffc4b0c74728293adfe1703e2fea SHA256 f8d1343c8be2b3b2de568bce6a07c8d6df162f9c246dfdcfab7c5480e99e89d0
 DIST libmba-0.9.1.tar.gz 290080 RMD160 f13f99295347721628d06ec8824eae9f80515c4f SHA1 9787f02f0be5d1f4e61fb00c8bfc789116b5b7e9 SHA256 1482c6c1a32794d1c40df471d25006ee1cae5b07ebd76b0301268dddb8629394
-EBUILD libmba-0.9.1-r1.ebuild 947 RMD160 4a1886327c74a2947b632835c00155ca65793cf5 SHA1 c171372a29826eb54fce662a9df39680c62755b4 SHA256 9ea97ecc945eeae45b5e754cbb433f4bb665a74c46408e26bbe4f5da22a63f0f
+EBUILD libmba-0.9.1-r1.ebuild 939 RMD160 71ee48fde6b66b9d9c25329679e2c2a269629a40 SHA1 259192e33d8c3474735ca16752a2d9e656adcc49 SHA256 38bb0dcc18169bd7e8497d17bc4ecacda65b73c3c6d2d80ecdcd162372bbd87f
 EBUILD libmba-0.9.1.ebuild 1066 RMD160 97310dbcf98469f5ce5043b2e85cbbcd5b8484c1 SHA1 2cb37f359d235eb8a3108da7f871c67d472b21e2 SHA256 837805401962afc2c24ccbd7b71cf097ceb233efaf725b47f592372361d22a79
-MISC ChangeLog 876 RMD160 45ae1b3e7047f2c9494be61a91d908517ef8a5b6 SHA1 ddf8f06e5e98a9d13c53f13b13a76a6d08ce3422 SHA256 ae88486cc9db2d3414568eaa68586587a777f596de0d1371ad83e41bc210430d
+MISC ChangeLog 979 RMD160 8874dc73802e07820d8eec2ad2dbc392a9744c34 SHA1 71254d76242c223933411d61122dad1ddecbe06f SHA256 66003fb6431deba2c0092b7e59ab2ad83039b62577e18ab287d17e1f7da92907
 MISC metadata.xml 232 RMD160 4ac0294cb9dd42588d67d2161965d8ea2db60b19 SHA1 996716c7a1e0a083d7563c9444f9813dc4e87b8c SHA256 6b5c74c1d72392418bb791869a55fa906b236886730efe2ce4c2f3f87bb0ed3d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk59C7MACgkQfXuS5UK5QB24rwP+OTum0qxk+7bQbednQjGz41Zx
-ZQoW10a3GmX42qxI/P/A9TECY179aQpYxtjWBLVRYf1hJNMQMOQqJS+xF7gj+yBh
-XtedbV4Tkoa9guZ5cqS6rocS+hA8U8Q7HUa2kZKejLFD/Ba6phhViPL0nXtCnq0w
-+Z0oI/y1s6QJfhIaAqM=
-=FV++
+iQEcBAEBCgAGBQJO61aDAAoJEOTDgjZ80txdGCUH/A2mAGA5FYRur1PmvS6htVG3
+sNwwhr4ijk1jKA0UIr+VdJ73inG12k9zn0NfT1vsWfWgRyymdvimOm0prQQZIZ2P
+bYkM0NBzxPsmlyq+aLACm0JLYdXHlMqDdp0Yr7Uyxl08JqxTtTwxjxv9TOmZAFhu
+Kzr0QUa+tr5Mq/mMNnsie1yORD6fDf0UedpcM73hCY+wWzTyHmnN7rBdZV5u4pK2
+9ld4g5izX8rwTExN4Cn5bufqdBlV5NGaPwusNGJ3mcNZyKoNw/i1Y0ZjJyIhpRGT
+Wvc0x9THa+E1EBhydXIfpEmqiZa1VoN9lVI+QxWxbL2zXCcqsOSJN3NDFefmWBs=
+=oOma
 -----END PGP SIGNATURE-----
