@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmba/libmba-0.9.1-r1.ebuild,v 1.1 2010/06/20 18:52:58 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmba/libmba-0.9.1-r1.ebuild,v 1.2 2011/12/16 14:32:12 ago Exp $
 
 EAPI="2"
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.ioplex.com/~miallen/libmba/dl/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 IUSE="static-libs"
 
 pkg_setup(){
