@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libmba
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmba/ChangeLog,v 1.4 2010/06/20 18:52:58 xarthisius Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmba/ChangeLog,v 1.5 2011/12/16 14:32:12 ago Exp $
+
+  16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> libmba-0.9.1-r1.ebuild:
+  Stable for AMD64, wrt bug #393739
 
 *libmba-0.9.1-r1 (20 Jun 2010)
 
